# should-not-typecheck

./: .ghci  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  should-not-typecheck.cabal  stack.yaml  type-test.cabal
src/: TypeTest.hs
src/Test/: ShouldNotTypecheck.hs
test/: ShouldNotTypecheckSpec.hs  TypeTestSpec.hs
