name:                should-not-typecheck
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/CRogers/should-not-compile
license:             BSD3
license-file:        LICENSE
author:              Callum Rogers
maintainer:          message.me.on@github.com
-- copyright:
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.ShouldNotTypecheck
  build-depends:       base >= 4.7 && < 5
                     , HUnit >= 1.2
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ShouldNotTypecheckSpec.hs
  build-depends:       base
                     , should-not-typecheck
                     , HUnit >= 1.2
                     , hspec >= 2.1
                     , hspec-expectations >= 0.6 
  default-language:    Haskell2010
