name:                should-not-typecheck
version:             2.1.0
synopsis:            A HUnit/hspec assertion library to verify that an expression does not typecheck
description:
  For examples and an introduction to the library please take a look at the <https://github.com/CRogers/should-not-typecheck#should-not-typecheck- README> on github.
homepage:            http://github.com/CRogers/should-not-typecheck
license:             BSD3
license-file:        LICENSE
author:              Callum Rogers
maintainer:          message.me.on@github.com
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:
    README.md
  , CHANGELOG.md
  , stack.yaml
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1, GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Test.ShouldNotTypecheck
  build-depends:       base >= 4.6 && < 5
                     , HUnit >= 1.2
                     , deepseq >= 1.3
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ShouldNotTypecheckSpec.hs
  build-depends:       base
                     , should-not-typecheck
                     , HUnit >= 1.2
                     , hspec >= 2.1
                     , hspec-expectations >= 0.6
                     , deepseq
  default-language:    Haskell2010

source-repository head
  type: git
  location: git://github.com/CRogers/should-not-typecheck.git
