name:                type-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TypeTest
  build-depends:       base >= 4.7 && < 5
                     , hspec-expectations
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TypeTestSpec.hs
  build-depends:       base
                     , type-test
                     , HUnit
                     , hspec
                     , hspec-expectations
  default-language:    Haskell2010
